fixed overflow ul issue

--- a/src/sass/components/_todolist.scss
+++ b/src/sass/components/_todolist.scss
@@ -4,7 +4,13 @@
   margin-top: 2.4rem;
   border-radius: 5px;
   min-height: 100%;
-  overflow: hidden;
+  // overflow: hidden;
+
+  &__item:first-of-type {
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
+  }
+
   &__item {
     display: flex;
     gap: 2.6rem;
@@ -15,6 +21,8 @@
     cursor: pointer;
     align-items: center;
     // border-radius: 5px;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
 
     @include responsive {
       padding: 1.6rem;
